--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -33,6 +33,9 @@
     <None Update="inputs\input9.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\input10.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
