--- a/AdventOfCode2020/AdventOfCode2020.csproj
+++ b/AdventOfCode2020/AdventOfCode2020.csproj
@@ -9,6 +9,9 @@
     <None Update="inputs\input10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\input14.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="inputs\input16.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
