--- a/AdventOfCode2020/AdventOfCode2020.csproj
+++ b/AdventOfCode2020/AdventOfCode2020.csproj
@@ -12,6 +12,9 @@
     <None Update="inputs\input11.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\input13.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="inputs\input14.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
