--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -9,6 +9,9 @@
     <None Update="inputs\input1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\input18.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="inputs\input2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
