--- a/AdventOfCode2024/AdventOfCode2024.csproj
+++ b/AdventOfCode2024/AdventOfCode2024.csproj
@@ -26,6 +26,9 @@
     <None Update="inputs\day14.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\day15.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="inputs\day2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
