--- a/AdventOfCode2024/AdventOfCode2024.csproj
+++ b/AdventOfCode2024/AdventOfCode2024.csproj
@@ -29,6 +29,9 @@
     <None Update="inputs\day15.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="inputs\day16.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="inputs\day2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
